Give Buttons a concrete height on mobile to address scaling issue

--- a/src/component/chat/ChatMenu.scss
+++ b/src/component/chat/ChatMenu.scss
@@ -91,6 +91,7 @@
 }
 
 .endChatMobileButton {
+  height: #{35/$font-size}rem;
   width: 100%;
   max-width: none;
   border-radius: #{4/$font-size}rem;
